--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "em-react-calendar-test10",
+  "name": "em-react-calendar-test9",
   "version": "1.0.1",
   "type": "module",
   "exports": "./dist/em-react-calendar.es.js",
