--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "em-react-calendar-test9",
-  "version": "1.0.5",
+  "name": "em-react-calendar",
+  "version": "1.0.0",
   "type": "module",
   "exports": "./dist/em-react-calendar.es.js",
   "licence": "MIT",
