Add to package?json "files" key

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   ],
   "files": [
     "./dist/*",
-    "./index.js"
+    "./index.js",
+    "./calendar.png",
+    "./example/calendar-demo"
   ],
   "jest": {
     "verbose": true,
